css/styles.css
/* global styles */
@import url("/css/fonts/fonts.css");

* {
  text-decoration: none;
  box-sizing: border-box;
  /* border: 1px solid red; */
}

body {
  font-family: "montserrat regular", Verdana, Geneva, Tahoma, sans-serif;
}

a {
  color: white;
}

a i {
  margin: 0 10px;
}

header nav a {
  color: white;
  font-size: 25px;
}

.hero {
  background-image: url("../img/cityscape.jpeg");
  background-position: cover;
  background-repeat: no-repeat;
  height: 120vh;
  width: 100%;
  color: white;
}

.dark-cover {
  width: 100%;
  height: 100%;
  background-color: black;
  opacity: 0.4;
}

.headline {
  font-family: "roboto bold", Verdana, Geneva, Tahoma, sans-serif;
  font-size: 25px;
  font-weight: 700;
  color: #fff;
  z-index: 8;
}

.hero-content,
.btn {
  z-index: 7;
}

.getting-started,
.subscribe-section {
  max-width: 90%;
  margin: 0 auto;
}

.getting-started p {
  width: 300px;
  margin: 20px auto;
  padding-bottom: 40px;
}

.bg-grey {
  background-color: rgb(161, 161, 161);
}

.bg-dark {
  background-color: black;
  color: white;
}

footer {
  background-color: black;
  color: #aaa;
}

.value-proposition {
  color: white;
}

.value-proposition button {
  padding: 10px;
  width: 200px;
  border: 0;
  background-color: #eee;
  color: #333;
}

.value-proposition  div img {
  margin: 30px;
  width: 250px;
  height: 250px;
}

.decorated-nav {
  border-top: 0 solid #000;
  border-bottom: 1px solid #000;
}

h4,
.decorated-nav a {
  font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  font-size: 13px;
  color: #aaa;
  padding-bottom: 0;
  margin-bottom: 0;
  font-weight: 600;
  text-transform: uppercase;
}

header a:hover {
  color: gold;
  text-decoration: none;
}

.decorated-nav a:hover {
  color: #fff;
}

@media (min-width: 768px) {
  .decorated-nav {
    border-top: 1px solid #aaa;
    border-bottom: 1px solid #aaa;
  }
}

.opacity-9 {
  opacity: 0.9;
}

.footer-logo {
  padding: 25px;
  border: 1px solid white;
  background-color: black;
  font-size: 20px;
}

footer h4 {
  font-size: 18px;
  margin: 15px;
}

footer .input-group {
  width: 250px;
  margin: 5px auto;
}

.input-group input {
  background-color: black;
}

.footer-bottom {
  background-color: rgb(29,0,0);
}

.details div {
  border: 1px solid lightgrey;
  border-radius: 2px;
  text-align: center;
}

.red-bg { background-color: rgb(212, 87, 74); } 
.blue-bg { background-color: rgb(81, 156, 216); }
.gray-bg { background-color: rgb(230, 230, 230); }
.yellow-bg { background-color: rgb(230, 172, 91); }

